--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ atpublic==5.0
 attrs==24.2.0
 blinker==1.8.2
 click==8.1.7
+coverage==7.6.1
 exceptiongroup==1.2.2
 Flask==3.0.3
 Flask-Login==0.6.3
@@ -20,6 +21,7 @@ mysqlclient==2.2.4
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.2
+pytest-cov==5.0.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.31
 tomli==2.0.1
